--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,14 @@ name = "search-engine-rust"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "tokenizer"
+path = "src/tokenizer.rs"
+
+[[bin]]
+name = "query"
+path = "src/query.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
