--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,23 +1,3 @@
-[package]
-name = "search-engine-rust"
-version = "0.1.0"
-edition = "2021"
+[workspace]
 
-[[bin]]
-name = "tokenizer"
-path = "src/tokenizer.rs"
-
-[[bin]]
-name = "query"
-path = "src/query.rs"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-logos = "0.12.1"
-regex = "1.6.0"
-lazy_static = "1.4.0"
-sha2 = "0.10.2"
-hex = "0.4.3"
-clap = { version = "3.2.16", features = ["derive"] }
-encoding = "0.2.33"
+members = [ "src/util", "src/tokenizer", "src/query" ]
