--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,8 @@
 [workspace]
 
-members = [ "src/util", "src/tokenizer", "src/query" ]
+members = [ 
+    "src/util", 
+    "src/tokenizer", 
+    "src/query", 
+    "src/server", 
+]
