--- a/src/util/Cargo.toml
+++ b/src/util/Cargo.toml
@@ -11,3 +11,5 @@ regex = "1.6.0"
 lazy_static = "1.4.0"
 sha2 = "0.10.2"
 hex = "0.4.3"
+serde = { version = "1.0.143", features = ["derive"] }
+serde_json = "1.0.83"
