--- a/src/tokenizer/Cargo.toml
+++ b/src/tokenizer/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 util = { path = "../util" }
+clap = { version = "3.2.16", features = ["derive"] }
 encoding = "0.2.33"
 threadpool = "1.8.1"
 num_cpus = "1.13.1"
